# quotes-recommender

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  local.env  package-lock.json  pyproject.toml  sample.local.env  scrapy.cfg
.github/workflows/: code-style.yaml  codeql.yaml
.streamlit/: config.toml  pages.toml
config/: config.yaml
data/: data1.json
quotes_recommender/: app.py
quotes_recommender/core/: constants.py  long_tag_mapping.json  models.py  short_tag_mapping.json
quotes_recommender/document_store/: document_store_redis.py  document_store_singleton.py
quotes_recommender/frontend/: package-lock.json  package.json
quotes_recommender/frontend/src/components/dashboard/: dashboard.jsx
quotes_recommender/frontend/src/components/results/: elements.js
quotes_recommender/ml_models/: sentence_encoder.py
quotes_recommender/quote_scraper/: constants.py  items.py  middlewares.py  pipelines.py  settings.py
quotes_recommender/quote_scraper/spiders/: azquotes_spider.py  goodreads_spider.py
quotes_recommender/ui/: package-lock.json  preferences.py  recommendations.py  searching.py
quotes_recommender/ui/public/: manifest.json
quotes_recommender/ui/src/components/: index.js
quotes_recommender/ui/src/components/results/: results.jsx  samplequotes.js
quotes_recommender/ui/src/components/searchbox/: searchbox.css  searchbox.jsx
quotes_recommender/user_store/: constants.py  models.py  user_store_redis.py  user_store_singleton.py
quotes_recommender/utils/: qdrant.py  redis.py  singleton.py  streamlit.py
quotes_recommender/vector_store/: constants.py  vector_store_qdrant.py  vector_store_singleton.py
src/core/: constants.py
src/document_store/: constants.py  document_store_redis.py  document_store_singleton.py
src/quote_scraper/: items.py  middlewares.py  pipelines.py  settings.py
src/quote_scraper/spiders/: azquotes_spider.py  goodreads_spider.py
src/quotesscraper/: scrapy.cfg
src/quotesscraper/quotesscraper/: items.py  pipelines.py  settings.py
src/quotesscraper/quotesscraper/spiders/: quotesspider.py
src/ui/: package-lock.json  package.json
src/ui/public/: index.html
src/ui/src/: App.css  App.js
src/ui/src/assets/: index.js
src/ui/src/components/dashboard/: dashboard.jsx
src/ui/src/components/navbar/: navbar.css  navbar.jsx
src/ui/src/components/results/: elements.js  samplequotes.js
src/ui/src/components/searchbox/: elements.js  searchbox.jsx
src/ui/src/components/usersuggestioncard/: elements.js  index.js  usersuggestioncard.jsx
src/ui/src/components/usersuggestions/: elements.js  index.js  quotes.js  usersuggestions.jsx
src/utils/: redis.py  singleton.py
src/vector_store/: vector_store_qdrant.py  vector_store_singleton.py
tests/: conftest.py  constants.py  data.dvc  test_dummy.py
tests/vector_store/: test_vectore_store_qdrant.py
ui/: package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.js
ui/src/components/Button/: Button.jsx
