[tool.poetry]
name = "quotes-recommender"
version = "0.1.0"
description = "Quote Recommender Project - Part of the Data Integration Course in Winter Term 23/24 "
authors = ["Mathis <mathun3003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
poethepoet = "^0.22.1"
scrapy = "^2.11.0"
pydantic-settings = "^2.0.3"
pydantic = "^2.4.2"
yarl = "^1.9.2"
redis = "^5.0.1"
jupyter = {version="^1.0.0", optional=true}
qdrant-client = "^1.6.9"
sentence-transformers = "^2.2.2"
streamlit = "^1.29.0"
st-pages = "^0.4.5"
streamlit-authenticator = "^0.2.3"
watchdog = "^3.0.0"

[tool.poetry.group.ci.dependencies]
mypy = "^1.5.1"
black = "^23.7.0"
pylint = "^2.17.5"
isort = "^5.12.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pycodestyle = "^2.11.0"
pytest-dotenv = "^0.5.2"
dvc = {extras = ["ssh"], version = "^3.30.1"}
types-redis = "^4.6.0.11"

[tool.poetry.extras]
notebooks = ["jupyter"]

[tool.poetry.scripts]
poe = "poethepoet:main"

[tool.poetry.plugins."poetry.application.plugin"]
poethepoet = "poethepoet.plugin:PoetryPlugin"

[tool.poe.tasks]
_clean_docs.script = "shutil:rmtree('docs/_build', ignore_errors=1)"

    [tool.poe.tasks.dev-setup]
    help = "Setup the project for development"
    sequence = [
        {cmd = "poetry install --sync"},
        {cmd = "docker compose up -d qdrant"},
        {cmd = "poetry run dvc pull"},
    ]

    [tool.poe.tasks.scrape-goodreads]
    help = "Run the goodreads-spider locally"
    cmd = "scrapy crawl goodreads-spider"

    [tool.poe.tasks.typing]
    help = "Run MyPy checker on the code base"
    cmd  = "mypy quotes_recommender"

    [tool.poe.tasks.pep8]
    help = "Runs PEP8 (pycodestyle) checker on the code base"
    cmd = "pycodestyle quotes_recommender --max-line-length=120"

    [tool.poe.tasks.lint]
    help = "Run pylint"
    cmd  = "pylint quotes_recommender"

    [tool.poe.tasks.isort]
    help = "Sort imports. This affects the code base as this makes changes to affected files."
    cmd = "isort quotes_recommender"

    [tool.poe.tasks.black]
    help = "Format code using black. This affects the code base as this makes changes to affected files."
    cmd = "black quotes_recommender"

    [tool.poe.tasks.style-black]
    help = "Validate black code style"
    cmd  = "black quotes_recommender --check --diff"

    [tool.poe.tasks.style-isort]
    help = "Validate isort code style"
    cmd  = "isort quotes_recommender --check --diff"

    [tool.poe.tasks.style]
    help = "Validate code style"
    sequence = ["style-isort", "style-black", "pep8"]
    ignore_fail = true

    [tool.poe.tasks.tests]
    help = "Run unit and feature tests"
    cmd  = "pytest tests --cov=quotes_recommender"

    [tool.poe.tasks.ci]
    help     = "Execute all CI tasks"
    sequence = ["typing", "lint", "style", "tests"]
    ignore_fail = true

    [tool.poe.tasks.clean]
    help = "Remove generated files"
    cmd  = """
    # multiline commands including comments work too!
    rm -rf .coverage
           .mypy_cache
           .pytest_cache
           ./**/__pycache__
           dist
           htmlcov
           ./docs/_build
           ./tests/fixtures/simple_project/venv
           ./tests/fixtures/venv_project/myvenv
           ./tests/fixtures/poetry_plugin_project/**/.venv
           ./tests/temp
     """

    [tool.poe.tasks.install-poetry-plugin]
    help = "Install or update this project as a plugin in poetry"
    sequence = [
      { cmd = "poetry self remove poethepoet"},
      { cmd = "poetry self add \"${POE_ROOT}[poetry_plugin]\""}
    ]
    ignore_fail = true

[tool.isort]
profile = "black"
py_version = 310

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[[tool.mypy.overrides]]  # TODO: remove this section once qdrant updated its client's dependencies
module = "requests.*"
ignore_missing_imports = true
ignore_errors = true

[tool.pylint]
max-line-length = 120
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "W1203",  # logging-fstring-interpolation
    "E0213",  # no-self-argument
    "E1101",  # no-member
    "W0511"   # To-Dos
]

[tool.pytest.ini_options]
filterwarnings=["ignore::DeprecationWarning", "ignore::UserWarning:"]
env_files="local.env"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
